wip: working on selection

--- a/manifest.json
+++ b/manifest.json
@@ -12,12 +12,10 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["scripts/content.js", "scripts/popup.js"],
+      "js": ["src/scripts/content.jsx"],
       "run_at": "document_idle"
     }
   ],
-  "{{chrome}}.manifest_version": 3,
-  "{{firefox}}.manifest_version": 2,
   "icons": {
     "16": "icon.png",
     "32": "icon.png",
@@ -25,22 +23,7 @@
     "96": "icon.png",
     "128": "icon.png"
   },
-  "{{chrome}}.action": {
-    "default_popup": "index.html"
-  },
-  "{{firefox}}.browser_action": {
-    "default_popup": "index.html"
-  },
   "background": {
-    "{{chrome}}.service_worker": "scripts/background.js",
-    "{{firefox}}.scripts": ["scripts/background.js"]
-  },
-  "content": {
-    "{{chrome}}.service_worker": "scripts/content.js",
-    "{{firefox}}.scripts": ["scripts/content.js"]
-  },
-  "popup": {
-    "{{chrome}}.service_worker": "scripts/popup.js",
-    "{{firefox}}.scripts": ["scripts/popup.js"]
+    "service_worker": "src/scripts/background.js"
   }
 }
