--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/chrome": "^0.0.326",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.4.1",
@@ -25,6 +26,7 @@
     "globals": "^16.0.0",
     "sass": "^1.89.2",
     "sass-embedded": "^1.89.2",
+    "typed-scss-modules": "^8.1.1",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
   }
