--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,12 @@
     "jsx": "react-jsx",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "typeRoots": ["./node_modules/@types", "src/types"]
   },
-  "include": ["src"]
+  "include": ["src/**/*", "src/types/*.d.ts"]
 }
